@@ -1,3 +1,7 @@
+2006-07-09  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* syntax.c (Fforward_comment): Revert the reversion.
+
 2006-07-09  John Paul Wallington  <jpw@pobox.com>
 
 	* syntax.c (Fforward_comment): Revert previous change.
